add footer with &hearts (❤️)

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                 architecto nam laboriosam quos, quaerat temporibus ut.</p>
         </article>
     </main>
+    <footer>
+        <p>Made with &hearts; by...</p>
+    </footer>
 </body>
 
 </html>
