--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <h1>Header</h1>
     </header>
     <!-- Contenitore principale per il contenuto della pagina -->
+     <!-- utilizzare <article> perchè è un elemento semantico che rappresenta contenuto autonomo e indipendente. Il contenuto all'interno di un <article> dovrebbe avere senso compiuto anche se preso singolarmente e distribuito altrove. È l'ideale per post di blog, articoli di notizie, commenti degli utenti, recensioni, ecc. -->
     <main>
         <!-- 1*blocco -->
         <article class="card">
