--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Layout Cards</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" type="text/css" href="./styles.css">
 </head>
 
 <body>
@@ -14,7 +14,7 @@
     </header>
     <!-- Contenitore principale per il contenuto della pagina -->
     <!-- utilizzare <article> perchè è un elemento semantico che rappresenta contenuto autonomo e indipendente. Il contenuto all'interno di un <article> dovrebbe avere senso compiuto anche se preso singolarmente e distribuito altrove. È l'ideale per post di blog, articoli di notizie, commenti degli utenti, recensioni, ecc. -->
-    <!-- chiedere successivamente perchè <article>... io averi utilizzato <div> -->
+    <!-- aggiungere sezione ad ogni card-->
     <main>
         <!-- 1*blocco -->
         <article class="card">
