--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- utilizzare <article> perchè è un elemento semantico che rappresenta contenuto autonomo e indipendente. Il contenuto all'interno di un <article> dovrebbe avere senso compiuto anche se preso singolarmente e distribuito altrove. È l'ideale per post di blog, articoli di notizie, commenti degli utenti, recensioni, ecc. -->
 
 
-    <main class="card box">
+    <main class="box">
         <!-- 1*blocco -->
         <article class="card">
             <h2>Pinco Pallo</h2>
